2006-06-13 Alasdair Allan <aa@astro.ex.ac.uk>

	* bin/event_broker.pl: Fixed message parsing for IAMALIVE and ACK
	  responses. I've got deja vu, I thought I'd done that already!?


2006-06-12 Alasdair Allan <aa@astro.ex.ac.uk>

	* bin/ogle_client.pl: Added an event client which listens for OGLE
	  event messages and then submits 3x30s observations onto Robonet-1.0
	  for an initial "first look".
	  
	* bin/event_broker.pl: Finally fixe alarm clock errors for good, and
	  added semaphoring from the IAMALIVE thread to the event handling
	  thread that the remote client is not responding to messages.  
	  
2006-06-07 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/event_broker.pl & eSTAR/Broker/Handler.pm: Moved to using
	  <Transport> rather than <VOEvent> XML for acks and iamalives,
	  still echo iamalives from upstream. Also moved to using VOEvent
	  module to build these messages for none RAPTOR or eSTAR hosts,
	  using the new XML::Document::Transport class to build the 
	  <Transport> messages.
	  
2006-06-06 Aladair Allan <aa@astro.ex.ac.uk>

	* Moved services off the dying estar.astro.ex.ac.uk machine

        * bin/test_servers.pl: Modified the hardcoded endpoints, added
	  pining of the actual servers as well checks on the software.

	* bin/ogle_parsemail.pl: Modified the harcoded endpoint

        * startup/*: Added the startup scripts into the repository

	* crontab/*: Added the crontab files into the repository

	* etc/rc.d/*: Added the /etc/rc.d/rc.local files into archive
	
2006-05-22 Alasdair Allan <aa@astro.ex.ac.uk>

	* bin/event_test.pl: Fixed STC block in boiler plate test message

2006-05-19 Alasdair Allan <aa@astro.ex.ac.uk>

	* bin/event_broker.pl: Moved to VOEvent v1.1
	
	* bin/event_client.pl: Moved to VOEvent v1.1
	
	* bin/event_test.pl: Moved to VOEvent v1.1
	
	* bin/raptor_alert.pl: Moved to VOEvent v1.1
	
	* bin/raptor_gateway.pl: Moved to VOEvent v1.1
	
	* eSTAR/Broker/Handler.pm: Moved to VOEvent v1.1
	