@@ -20,7 +20,7 @@ Alasdair Allan (aa@astro.ex.ac.uk)
 
 =head1 REVISION
 
-$Id: make_observation.pl,v 1.3 2005/05/05 13:54:40 aa Exp $
+$Id: make_observation.pl,v 1.4 2006/06/21 07:59:36 aa Exp $
 
 =head1 COPYRIGHT
 
@@ -37,7 +37,7 @@ use vars qw / $VERSION $log /;
 #  Version number - do this before anything else so that we dont have to 
 #  wait for all the modules to load - very quick
 BEGIN {
-  $VERSION = sprintf "%d.%d", q$Revision: 1.3 $ =~ /(\d+)\.(\d+)/;
+  $VERSION = sprintf "%d.%d", q$Revision: 1.4 $ =~ /(\d+)\.(\d+)/;
  
   #  Check for version number request - do this before real options handling
   foreach (@ARGV) {
@@ -125,6 +125,7 @@ my $status = GetOptions( "host=s"     => \$opt{"host"},
                          "seriescount=s" => \$observation{"seriescount"},
                          "interval=s" => \$observation{"interval"},
                          "tolerance=s" => \$observation{"tolerance"},
+			 "toop=s" => \$observation{"toop"}
                           );
 
 # default hostname
